Added thrust reversers. Fixed the de-activate animation of RATs.

--- a/RATPack/GameData/RATPack/Parts/RATs/BasicRat.cfg
+++ b/RATPack/GameData/RATPack/Parts/RATs/BasicRat.cfg
@@ -26,6 +26,8 @@ PART
 	MODEL
 	{
 		model = RATPack/Parts/RATs/BasicRat
+		texture = mk2Fuselage, Squad/Parts/FuelTank/mk2FuselageLong/mk2Fuselage
+
 	}
 	RESOURCE
 	{
