--- a/RATPack/GameData/RATPack/Parts/RATs/RadialRat.cfg
+++ b/RATPack/GameData/RATPack/Parts/RATs/RadialRat.cfg
@@ -26,6 +26,7 @@ PART
 	MODEL
 	{
 		model = RATPack/Parts/RATs/RadialRat
+		texture = mk2Fuselage, Squad/Parts/FuelTank/mk2FuselageLong/mk2Fuselage
 	}
 	RESOURCE
 	{
