Added TAWS, rebalanced RATs, and added the RAT-720 Fixed a bug in ModuleThrustReverse that would produce reverse thrust from a flamed-out engine. Added an example craft.

--- a/RATPack/GameData/RATPack/Parts/RATs/RadialRat.cfg
+++ b/RATPack/GameData/RATPack/Parts/RATs/RadialRat.cfg
@@ -12,7 +12,7 @@ PART
 	subcategory = 0
 	title = RAT-360 "Cage Master" Ram Air Turbine
 	manufacturer = SatNet Aerospace Inc
-	description = A Ram Air Turbine with the ability to auto-activate when power is lost. Providing more power than earlier models you can almost power a coffee maker or SAS (sold separately). Built inside of an aerodynamic shell it takes a few seconds to deploy and provide power.
+	description = A Ram Air Turbine with the ability to auto-activate when power is lost. Providing more power than earlier models you can almost power a coffee maker or SAS (sold separately). Built inside of an aerodynamic shell it takes a few seconds to deploy and provide power. It has the most consistent power output of all RATs.
 	attachRules = 0,1,0,0,1
 	mass = 0.04
 	dragModelType = default
@@ -40,5 +40,14 @@ PART
 		generatorAnimation=Scene
 		deployAnimation=Deploy
 		autoDeploy=true
+		chargeRate=1.5
+		airspeedCurve
+		{
+			key = 0,0,0,0
+			key = 1,0.6,0,0
+			key = 50,1,0,0
+			key = 350,1,0,0
+			key = 1600,0.8,0,0
+		}
 	}
 }
