--- a/RATPack/GameData/RATPack/Parts/RATs/BasicRat.cfg
+++ b/RATPack/GameData/RATPack/Parts/RATs/BasicRat.cfg
@@ -42,5 +42,13 @@ PART
 		deployAnimation=
 		autoDeploy=false
 		chargeRate=0.75
+		airspeedCurve
+		{
+			key = 0,0,0,0
+			key = 4,0.4,0,0
+			key = 100,1,0,0
+			key = 250,1,0,0
+			key = 1600,0.4,0,0
+		}
 	}
 }
