--- a/RATPack/GameData/RATPack/Parts/RATs/RadialRat.cfg
+++ b/RATPack/GameData/RATPack/Parts/RATs/RadialRat.cfg
@@ -7,12 +7,12 @@ PART
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, 0.0
 	TechRequired = electrics 
 	entryCost = 1200
-	cost = 100
+	cost = 140
 	category = Utility
 	subcategory = 0
 	title = RAT-360 "Cage Master" Ram Air Turbine
 	manufacturer = SatNet Aerospace Inc
-	description = A Ram Air Turbine with the ability to auto-activate when power is lost. Providing more power than earlier models you can almost power a coffee maker or SAS (sold separately). Built inside of an aerodynamic shell it takes a few seconds to deploy and provide power. It has the most consistent power output of all RATs.
+	description = A Ram Air Turbine with the ability to auto-activate when power is lost. Providing more power than earlier models you can almost power a coffee maker or SAS (sold separately). Built inside of an aerodynamic shell it takes a few seconds to deploy and provide power. Due to the aerodynamic shell it requires higher speeds and/or pressures to generate power, but isn't subject to power drop off above mach 1.
 	attachRules = 0,1,0,0,1
 	mass = 0.04
 	dragModelType = default
@@ -44,10 +44,11 @@ PART
 		airspeedCurve
 		{
 			key = 0,0,0,0
-			key = 1,0.6,0,0
-			key = 50,1,0,0
-			key = 350,1,0,0
-			key = 1600,0.8,0,0
+			key = 2,0.3,0,0
+			key = 50,0.6,0,0
+			key = 200,0.7,0,0
+			key = 350,0.7,0,0
+			key = 1600,1,0,0
 		}
 	}
 }
