--- a/RATPack/GameData/RATPack/Parts/RATs/RatCone.cfg
+++ b/RATPack/GameData/RATPack/Parts/RATs/RatCone.cfg
@@ -8,7 +8,7 @@ PART
 	node_attach = 0.0, 0.3, 0.0, 0.0, 0.0, 0.0
 	TechRequired = electrics
 	entryCost = 1000
-	cost = 80
+	cost = 200
 	category = Utility
 	subcategory = 0
 	title = RAT-720 "Topper" Ram Air Turbine
@@ -43,5 +43,13 @@ PART
 		deployAnimation=
 		autoDeploy=true
 		chargeRate=2
+		airspeedCurve
+		{
+			key = 0,0,0,0
+			key = 2,0.5,0,0
+			key = 100,1,0,0
+			key = 250,1,0,0
+			key = 1600,0.5,0,0
+		}
 	}
 }
