--- a/RATPack/GameData/RATPack/Parts/RATs/LargeRat.cfg
+++ b/RATPack/GameData/RATPack/Parts/RATs/LargeRat.cfg
@@ -42,13 +42,17 @@ PART
 		autoDeploy=true
 		managePartCharge=true
 		chargeRate=4.5
+		transformName=generateTransform
 		airspeedCurve
 		{
 			key = 0,0,0,0
-			key = 1,0.5,0,0
-			key = 50,1,0,0
-			key = 350,1,0,0
+			key = 25,0,0,0
+			key = 75,0.3,0.001,0.001
+			key = 300,0.3,0,0
+			key = 450,0.8,0,0
+			key = 800,1,0,0
 			key = 1600,0.8,0,0
+			key = 2000,0,0,0
 		}
 		
 	}
