--- a/RATPack/GameData/RATPack/Parts/RATs/RadialRat.cfg
+++ b/RATPack/GameData/RATPack/Parts/RATs/RadialRat.cfg
@@ -41,14 +41,15 @@ PART
 		deployAnimation=Deploy
 		autoDeploy=true
 		chargeRate=1.5
+		transformName=generateTransform
 		airspeedCurve
 		{
 			key = 0,0,0,0
-			key = 2,0.3,0,0
-			key = 50,0.6,0,0
-			key = 200,0.7,0,0
-			key = 350,0.7,0,0
-			key = 1600,1,0,0
+			key = 50,0,0,0
+			key = 800,1,0,0
+			key = 1100,0.8,0,0
+			key = 1400,0.7,0,0
+			key = 1800,0.4,0,0
 		}
 	}
 }
