--- a/RATPack/GameData/RATPack/Parts/RATs/BasicRat.cfg
+++ b/RATPack/GameData/RATPack/Parts/RATs/BasicRat.cfg
@@ -45,10 +45,11 @@ PART
 		airspeedCurve
 		{
 			key = 0,0,0,0
-			key = 4,0.4,0,0
-			key = 100,1,0,0
-			key = 250,1,0,0
-			key = 1600,0.4,0,0
+			key = 25,0,0,0
+			key = 100,0.5,0.007,0.002
+			key = 200,1,0,0
+			key = 300,0.6,-0.002,-0.005
+			key = 400,0,0,0
 		}
 	}
 }
