Terrain Radar and LES Trigger. Also configurable audio alert for TAWS.

--- a/RATPack/GameData/RATPack/Parts/LEST/LES.cfg
+++ b/RATPack/GameData/RATPack/Parts/LEST/LES.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = basicTAWS
+	name = basicLEST
 	module = Part
 	author = SatNet
 	rescaleFactor = 1
@@ -10,9 +10,9 @@ PART
 	cost = 600
 	category = Utility
 	subcategory = 0
-	title = TAWS-1 "Lookout" Warning System
+	title = LEST-1 "Oops" LES Trigger
 	manufacturer = SatNet Aerospace Inc
-	description = Provides advance warning before you hit the ground. 
+	description = Launch Escape System Trigger. Detects a catastrophic rocket failure just in time to trigger an abort. Warranty void if actually used. 
 	attachRules = 0,1,0,0,1
 	mass = 0.2
 	dragModelType = default
@@ -25,23 +25,12 @@ PART
 	bulkheadProfiles = srf
 	MODEL
 	{
-		model = RATPack/Parts/TAWS/TAWS
-		texture = mk2Fuselage, Squad/Parts/FuelTank/mk2FuselageLong/mk2Fuselage
+		model = RATPack/Parts/LEST/Lest
+		texture = advancedstabilizer, Squad/Parts/Command/inlineAdvancedStabilizer/model000
 
 	}
 	MODULE
 	{
-		name=ModuleTAWS
-		scanTransform=scanTransform
-		terrainAudio
-		{
-
-			clip = RATPack/Sounds/Cockpit/terrain-warn
-			next
-			{
-				clip = RATPack/Sounds/Cockpit/pull-up-warn
-			}
-		}
-
+		name=ModuleLESTrigger
 	}
 }
