--- a/RATPack/GameData/RATPack/Parts/TAWS/TRS.cfg
+++ b/RATPack/GameData/RATPack/Parts/TAWS/TRS.cfg
@@ -1,18 +1,18 @@
 PART
 {
-	name = basicTAWS
+	name = basicTrs
 	module = Part
 	author = SatNet
-	rescaleFactor = 1
+	rescaleFactor = 0.5
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, 0.0
 	TechRequired = landing
 	entryCost = 4800
 	cost = 600
 	category = Utility
 	subcategory = 0
-	title = TAWS-1 "Lookout" Warning System
+	title = TRS-1 "Lookdown" Terrain Radar
 	manufacturer = SatNet Aerospace Inc
-	description = Provides advance warning before you hit the ground. 
+	description = A terrain radar that scans the ground so you can pick and ideal landing spot. 
 	attachRules = 0,1,0,0,1
 	mass = 0.2
 	dragModelType = default
@@ -25,23 +25,16 @@ PART
 	bulkheadProfiles = srf
 	MODEL
 	{
-		model = RATPack/Parts/TAWS/TAWS
-		texture = mk2Fuselage, Squad/Parts/FuelTank/mk2FuselageLong/mk2Fuselage
-
+		model = RATPack/Parts/TAWS/TerrainRadar
+		texture = Mk3Fuselage, Squad/Parts/FuelTank/mk3Fuselage/Mk3Fuselage
 	}
 	MODULE
 	{
-		name=ModuleTAWS
+		name=ModuleTerrainRadar
 		scanTransform=scanTransform
-		terrainAudio
+		blipSound
 		{
-
-			clip = RATPack/Sounds/Cockpit/terrain-warn
-			next
-			{
-				clip = RATPack/Sounds/Cockpit/pull-up-warn
-			}
+			clip = RATPack/Sounds/blip
 		}
-
 	}
 }
